# BioFoV

./: .gitignore  .travis.yml  Makefile  README.md  README.md.old  biofov.dox  build-linux  build-windows  clean  clean-git  count  count-lines  framework.dox  gen_docs.sh  howto.txt  index.html  just-do-it  params.json
application/: about.ui  application.pro  common.pri  mainwindow.ui
application/framework/: camera.cpp  camera.hpp  drawable.hpp  framework.pro  modifier.hpp  player.hpp  rectanglemask.cpp  rectanglemask.hpp
application/framework/Drawables/: drawable.hpp  drawheight.cpp  drawheight.hpp  rectanglemask.cpp  rectanglemask.hpp
application/framework/Event/: Event.cpp  Event.hpp
application/framework/Feature/: Feature.hpp  faces.cpp  faces.hpp
application/framework/Frame/: Frame.cpp  Frame.hpp
application/framework/Individual/: Individual.hpp
application/framework/Snapshot/: Snapshot.cpp  Snapshot.hpp
application/framework/Video/: BackgroundSubtraction.cpp  BackgroundSubtraction.hpp  Video.cpp  Video.hpp
application/gui/: about.cpp  about.ui  calibrationdialog.hpp  calibrationdialog.ui  eventitem.cpp  eventitem.hpp  faceitem.cpp  faceitem.hpp  gui.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  splitdialog.cpp  splitdialog.hpp  splitdialog.ui  videoitem.cpp  videoitem.hpp  videoplayer.cpp  videoplayer.hpp  videoplayer.ui
application/resources/: project_pt.ts  resources.qrc
application/resources/haarcascades/: .directory
application/src/: QdialogAbout.cpp  QdialogAbout.hpp  QdialogCalibration.cpp  QdialogCalibration.hpp  QdialogSettings.cpp  QdialogSettings.hpp  QdialogSplit.cpp  QdialogSplit.hpp  QitemDrawable.cpp  QitemDrawable.hpp  QitemEvent.cpp  QitemEvent.hpp  QitemFace.cpp  QitemFace.hpp  QitemFrame.cpp  QitemFrame.hpp  QitemPlayer.cpp  QitemPlayer.hpp  QitemVideo.cpp  QitemVideo.hpp  QplayerVideo.cpp  QplayerVideo.hpp  QtreeFaces.cpp  QtreeFaces.hpp  QtreeVideos.cpp  QtreeVideos.hpp  QwindowMain.cpp  QwindowMain.hpp  calibrationdialog.cpp  camera.cpp  camera.hpp  eventitem.cpp  eventitem.hpp  exclusionmod.cpp  exclusionmod.hpp  faceitem.hpp  framework.pro  main.cpp  mainwindow.hpp  modifier.hpp  (+8 more)
application/src/Drawables/: drawable.cpp  drawable.hpp  drawangle.cpp  drawangle.hpp  drawheight.cpp  drawheight.hpp  drawlength.cpp  drawlength.hpp  drawreproj.cpp  drawreproj.hpp  drawwidth.cpp  drawwidth.hpp  rectanglemask.cpp  rectanglemask.hpp
application/src/Event/: Event.cpp  Event.hpp
application/src/Feature/: Feature.cpp  Feature.hpp  faces.cpp  faces.hpp
application/src/Frame/: Frame.cpp  Frame.hpp
application/src/Individual/: Individual.cpp  Individual.hpp
application/src/Snapshot/: Snapshot.cpp  Snapshot.hpp
application/src/Video/: BackgroundSubtraction.cpp  BackgroundSubtraction.hpp  Video.cpp  Video.hpp
application/ui/: calibrationdialog.ui  mainwindow.ui  qdialogsettings.ui  splitdialog.ui  videoplayer.ui
build-linux/: .gitignore  configure
build-windows/: .gitignore  configure
build_windows/: Toolchain-cross-mingw32-linux.cmake  configure
framework/: framework.pro
framework/Event/: Event.hpp
framework/Individual/: Individual.cpp
framework/Snapshot/: Snapshot.hpp
framework/Video/: Video.hpp
src/: CMakeLists.txt  Framework.cpp  Framework.hpp
src/Event/: Event.cpp  Event.hpp
src/Feature/: Feature.cpp  Feature.hpp
src/Frame/: Frame.cpp  Frame.hpp
src/GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/Individual/: Individual.cpp  Individual.hpp
src/Snapshot/: Snapshot.cpp  Snapshot.hpp
src/Video/: BackgroundSubtraction.cpp  BackgroundSubtraction.hpp  Video.cpp  Video.hpp
